--- a/hpmais/css/custom.css
+++ b/hpmais/css/custom.css
@@ -1,3 +1,86 @@
-body {
-  margin-top: 20px;
+.hero-unit {
+  padding: 0;
+  margin-top: 93px;
+}
+
+.navbar--custom {
+  padding-left: 0;
+  min-height: 93px;
+  height: 93px;
+  background: #000;
+  border: none;
+  box-shadow: none;
+  color: #fff;
+}
+
+.li--border-r {
+  border-right: 1px dashed #fff;
+  line-height: 2px;
+}
+
+.custom-nav {
+  background: rgba(65,66,65,1);
+  background: -moz-linear-gradient(top, rgba(65,66,65,1) 0%, rgba(0,0,0,1) 100%);
+  background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(65,66,65,1)), color-stop(100%, rgba(0,0,0,1)));
+  background: -webkit-linear-gradient(top, rgba(65,66,65,1) 0%, rgba(0,0,0,1) 100%);
+  background: -o-linear-gradient(top, rgba(65,66,65,1) 0%, rgba(0,0,0,1) 100%);
+  background: -ms-linear-gradient(top, rgba(65,66,65,1) 0%, rgba(0,0,0,1) 100%);
+  background: linear-gradient(to bottom, rgba(65,66,65,1) 0%, rgba(0,0,0,1) 100%);
+  filter: progid:DXImageTransform.Microsoft.gradient( startColorstr='#414241', endColorstr='#000000', GradientType=0 );
+  font-size: 12px;
+  white-space: nowrap;
+  color: #fff;
+  font-weight: bold;
+}
+
+.nav-justified>li>a {
+  color: #fff;
+}
+
+.nav-justified>li>a:hover,
+.nav-justified>li>a:focus {
+  background-color: transparent;
+  color: rgb(235, 255, 0);
+}
+
+.navbar-brand--custom {
+  position: absolute;
+  padding: 0;
+  line-height: 93px;
+  font-size: 25px;
+  color: #fff;
+}
+
+.navbar--social {
+  color: #fff;
+  text-align: right;
+  font-size: 20px;
+}
+
+.navbar-nav--custom {
+  position: absolute;
+  top: 93px;
+}
+
+.navbar--social > i {
+  margin-left: 5px;
+}
+
+.input--header {
+  height: 23px;
+  border-radius: 0;
+}
+
+.btn--header {
+  background: rgb(236, 220, 13);
+  height: 23px;
+  line-height: 23px;
+  font-weight: bold;
+  border-radius: 0;
+  padding: 0 2px;
+  color: #000;
+}
+
+.col-md-12 {
+  padding: 0;
 }
