--- a/hpmais/css/custom.css
+++ b/hpmais/css/custom.css
@@ -1,17 +1,82 @@
+@font-face {
+  font-family: 'Gotham';
+  src: url('../fonts/Gotham-Bold.otf');
+}
+
+@font-face {
+  font-family: 'Humanist';
+  src: url('../fonts/Humanist-777Bt-Light.otf');
+}
+
 .hero-unit {
   padding: 0;
-  margin-top: 93px;
+  margin-top: 90px;
 }
 
 .navbar--custom {
   padding-left: 0;
-  min-height: 93px;
-  height: 93px;
-  background: #000;
+  min-height: 90px;
+  height: 90px;
+  background: #074722;
   border: none;
+  border-bottom: 2px solid hsla(0, 0%, 100%, 0.4);
   box-shadow: none;
   color: #fff;
+  font-family: 'Gotham';
+  background-image: -webkit-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+  background-image: -moz-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+  background-image: -ms-repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+  background-image: repeating-radial-gradient(center center, rgba(0,0,0,.2), rgba(0,0,0,.2) 1px, transparent 1px, transparent 100%);
+  -webkit-background-size: 3px 3px;
+  -moz-background-size: 3px 3px;
+  background-size: 3px 3px;
+
 }
+
+@media (min-width: 768px) {
+  .navbar > .container .navbar-brand,
+  .navbar > .container-fluid .navbar-brand {
+    margin-left: 10px;
+  }
+}
+
+.navbar--custom .navbar-brand {
+  padding: 0;
+  line-height: 90px;
+  color: #fff;
+  margin-left: 10px;
+}
+
+.navbar--custom .navbar-brand--logo {
+  padding: 13.5px 0;
+}
+
+.navbar--custom .navbar-brand--fc {
+  font-family: 'Humanist';
+  color: #aad433;
+}
+
+.navbar-brand {
+  font-family: 'Gotham';
+  font-size: 25pt;
+  line-height: 90px;
+}
+
+.navbar--social {
+  color: #fff;
+  text-align: right;
+  font-size: 15px;
+}
+
+.navbar-nav--custom {
+  position: absolute;
+  top: 93px;
+}
+
+.navbar--social > i {
+  margin-left: 5px;
+}
+
 
 .li--border-r {
   border-right: 1px dashed #fff;
@@ -19,7 +84,7 @@
 }
 
 .custom-nav {
-  background: rgba(65,66,65,1);
+  background: rgba(55, 144, 55, 1);
   background: -moz-linear-gradient(top, rgba(65,66,65,1) 0%, rgba(0,0,0,1) 100%);
   background: -webkit-gradient(left top, left bottom, color-stop(0%, rgba(65,66,65,1)), color-stop(100%, rgba(0,0,0,1)));
   background: -webkit-linear-gradient(top, rgba(65,66,65,1) 0%, rgba(0,0,0,1) 100%);
@@ -31,6 +96,7 @@
   white-space: nowrap;
   color: #fff;
   font-weight: bold;
+  border-bottom: 2px solid hsla(0, 0%, 100%, 0.4);
 }
 
 .nav-justified>li>a {
@@ -43,28 +109,6 @@
   color: rgb(235, 255, 0);
 }
 
-.navbar-brand--custom {
-  position: absolute;
-  padding: 0;
-  line-height: 93px;
-  font-size: 25px;
-  color: #fff;
-}
-
-.navbar--social {
-  color: #fff;
-  text-align: right;
-  font-size: 20px;
-}
-
-.navbar-nav--custom {
-  position: absolute;
-  top: 93px;
-}
-
-.navbar--social > i {
-  margin-left: 5px;
-}
 
 .input--header {
   height: 23px;
@@ -81,6 +125,44 @@
   color: #000;
 }
 
-.col-md-12 {
-  padding: 0;
+.carousel--gradient {
+  position: absolute;
+  bottom: 0;
+  width: 100%;
+  height: 40%;
+  background-image: linear-gradient(to bottom, rgba(0,0,0,0.025) 0, rgba(0,0,0,0.8) 100%);
+  background-repeat: repeat-x;
+}
+
+
+@media screen and (min-width: 768px) {
+  .carousel-control .glyphicon-chevron-left,
+  .carousel-control .glyphicon-chevron-right,
+  .carousel-control .icon-prev,
+  .carousel-control .icon-next {
+    width: 30px;
+    height: 30px;
+    margin-top: -10px;
+    font-size: 30px;
+  }
+  .carousel-control .glyphicon-chevron-left,
+  .carousel-control .icon-prev {
+    margin-left: -10px;
+  }
+  .carousel-control .glyphicon-chevron-right,
+  .carousel-control .icon-next {
+    margin-right: -10px;
+  }
+  .carousel-caption {
+    font-family: 'Gotham';
+    font-size: 25px;
+    left: 10%;
+    right: 0;
+    padding-bottom: 30px;
+    text-align: left;
+    z-index: 2;
+  }
+  .carousel-indicators {
+    bottom: 20px;
+  }
 }
